--- a/rapport/Project_report.tex
+++ b/rapport/Project_report.tex
@@ -142,14 +142,16 @@ As we had to reduce the resolution, we wondered if such a deep network was neces
 \subsection{Data augmentation}
 Our last step is to see the effect of data augmentation techniques, as suggested in \cite{squelette_progr}. 
 
-A difficulty is that due to our limited computational power, we have to use precalculated scalograms/spectrograms. Thus the transformations we use have to be easily applied to the representations directly without too much calculations.
+A difficulty is that due to our limited computational power, we have to use precalculated scalograms/spectrograms (it already took about a day, so it is unrealistic to do it during the training). Thus the transformations we use have to be easily applied to the representations directly without too much calculations.
 
 The first technique we use is the interpolation described earlier, as \cite{squelette_progr}. We also try to add a Gaussian noise as in \cite{data_aug}. Finally, as we have an image as representation of our signal, we thought we could use some techniques coming from the computer vision field. It appeared that due to the form of our representations, a horizontal flip of the image exactly corresponds to playing the audio backward, and thus we use this as our last data augmentation technique. 
 
 We try to use them independently and then altogether. We make these tests both on the Mel architecture and the CNN architecture.
 \section{Evaluation}
 \subsection{BiLSTM}
-Our complete code can be found \href{https://github.com/clementberger/Deep-Learning.git}{here}. Part of it has been taken from the code of Gururani \etal \cite{attention}. The dropout rate for the BiLSTM has been set to 0.2 as in \cite{squelette_progr}. We try to set the number of BiLSTM layers to 1 and 3. This part has be done without any form of data augmentation.
+Our complete code can be found \href{https://github.com/clementberger/Deep-Learning.git}{here}. Part of it has been taken from the code of Gururani \etal \cite{attention}. The implementation has been done in pytorch.
+
+The dropout rate for the BiLSTM has been set to 0.2 as in \cite{squelette_progr}. We try to set the number of BiLSTM layers to 1 and 3. This part has be done without any form of data augmentation. To be close to the conditions of the paper, the batch-size has been set to 32 and we trained for 200 epochs.
 \begin{figure}
 	\centering
 	\includegraphics[scale = 0.5]{to_ref.png}
@@ -162,14 +164,22 @@ Our results are pretty closed to state-of-the-art. Depending on the instrument, 
 
 However we note a worse performance for the 3-layer version, especially for the violin. Taking into account the fact that the VGGish model already extracts high level features thanks to its pretrain and well designed structure, a deeper network after it may not be necessary and may create more confusion than help. So from now on all BiLSTM structures will be done using only 1 layer.
 \subsection{Spectrograms}
-\subsection{Data augmentation}
-
 \begin{figure}
 	\centering
 	\includegraphics[scale = 0.5]{cnn_plot.png}
 	\caption{Comparison of the instrument-level F1-score between our Mel 1-layer architecture and our CNN and CNN-reduced architectures, with no data augmentation.}
 	\label{cnn_plot}
 \end{figure}
+We now put to the test the use of AWT and spectrograms. The precalculation of the spectrograms is the only part that has been done in MATLAB, as it provides tools to efficiently compute an AWT with Morse wavelet. The results have then been exported to be given to python.
+
+As before, we take a batch-size of 32 and we train for 200 epochs. We use the same BiLSTM + attention structure as above, with only 1 layer as discussed. The results are compared to state-of-the-art. The results are represented in figure \ref{cnn_plot}.
+
+We can immediately see that the results are mostly worse than state-of-the-art (the clarinet is the exception). However we still achieve great results. We recall that this is compared to a network that has been pretrained on a big dataset, with a PCA. Thus the results seem to be promising. With more computational power, one could do the same for our CNN architecture, and great results would be expected.
+
+We also note that the depth of the CNN has only a small influence on the performance. Most instruments do not differ between them. It still seems that the deeper network is more efficient, so is to be preferred.
+\subsection{Data augmentation}
+
+
 \begin{figure}
 	\centering
 	\includegraphics[scale = 0.5]{mel_data.png}
